--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#__next {
+  min-height: 100vh;
+}
+
+body {
+  background-color: #f3f3f3;
+}
+
+@layer components {
+  .btn-primary {
+    @apply relative rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2;
+  }
+  .text-field {
+    @apply relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm;
+  }
+}
+
+@layer utilities {
+  .section-title {
+    @apply font-bold text-3xl;
+  }
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+}
